# sports-event-analysis-generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
Task 1/: .gitignore  README.md  pyproject.toml  task1.ipynb
Task 1/configs/: selected_sports.json
Task 1/scripts/: prepare_frames.py  train_cnn.py
Task 2/modeling_match_dynamics/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Task 2/modeling_match_dynamics/.github/workflows/: ci.yml
Task 2/modeling_match_dynamics/archive/scripts_legacy/: README.md  analyze_football_processed_targets.py  analyze_nba_target.py  build_lstm_feature_set_report.py  build_nba_matched_dataset.py  build_nba_movement_for_merged_50.py  cleanup_football_processed.py  create_football_feature_engineering_copy.py  inspect_nba_raw_sample.py  merge_nba.py  merge_nba_200.py  run_football_pipeline.py  run_nba_pipeline.py  show_nba_sample_heads.py
Task 2/modeling_match_dynamics/docs/: PROJECT_STRUCTURE.md
Task 2/modeling_match_dynamics/scripts/: run_data_audit_ui.py  run_football.py  run_nba.py  run_pipeline.py
Task 2/modeling_match_dynamics/scripts/common/: audit_data_quality.py  run_data_audit_ui.py  run_pipeline.py
Task 2/modeling_match_dynamics/scripts/football/: build_football_sequences.py  merge_football_data.py  process_football_merged.py  refresh_football_top50_thresholds.py  run_balanced_football_threshold_tuning.py  run_final_football_thresholds.py  run_football.py  run_football_calibration.py  run_football_error_analysis.py  run_football_feature_ablation.py  run_football_feature_engineering.py  run_football_historical_team_strength.py  run_football_pipeline.py  run_football_targeted_features.py  run_football_threshold_tuning.py  run_football_top50_retrain.py  train_football_lstm.py
Task 2/modeling_match_dynamics/scripts/nba/: add_historical_team_features.py  merge_nba_400.py  run_nba.py  run_nba_feature_engineering.py  run_nba_lstm_clutch_regression.py  run_nba_preprocessing.py  train_nba_lstm_feature_sets.py  validate_historical_timeline.py
Task 2/modeling_match_dynamics/src/match_dynamics/: __init__.py
Task 2/modeling_match_dynamics/src/match_dynamics/common/: __init__.py  config.py  data_loading.py  evaluation.py  models.py  pipeline.py  sequences.py  visualization.py
Task 2/modeling_match_dynamics/src/match_dynamics/football_pipeline/: __init__.py  calibration.py  core.py  error_analysis.py  event_processing.py  feature_engineering.py  lstm_ablation.py  lstm_training.py  merge.py  sequence_dataset.py  targeted_features.py  targeted_training.py  (+1 more)
Task 5/: .gitignore  README.md  pyproject.toml
Task 5/scripts/: build_assist_graph.py  extract_archives.py  prepare_datasets.py
(+58 files in other folders)
