[project]
name = "sports-event-analysis-generation"
version = "0.1.0"
description = "Educational ML/DL project for sports event analysis, match dynamics modeling, text generation, trajectory generation, and NBA network analysis."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "datasets>=2.18",
    "joblib>=1.4",
    "kaggle>=1.6",
    "matplotlib>=3.9",
    "networkx>=3.2",
    "nltk>=3.9",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pandas>=2.2",
    "Pillow>=10.0",
    "plotly>=5.24",
    "py7zr>=0.21",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "streamlit>=1.57",
    "tensorflow>=2.20",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "transformers>=4.40",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
