[project]
name = "sports-event-classification-task1"
version = "0.1.0"
description = "Prepare Sports-1M video frames for sport type classification."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "torch>=2.7",
    "torchvision>=0.22",
    "tqdm>=4.66",
    "yt-dlp>=2025.12.8",
]

[tool.uv]
package = false
