[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modeling-match-dynamics"
version = "0.1.0"
description = "Football Events and NBA Movement Data match dynamics modeling pipeline."
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "py7zr>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.6",
    "tensorflow>=2.20",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.5",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools.packages.find]
where = ["src"]
